--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,12 @@
-[build-system]
-requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "improver_example_data"
+version = "0.1.0"
+description = "Example data for IMPROVER worked examples"
+readme = "README.md"
+requires-python = ">=3.8"
+license = {file = "LICENSE"}
+
+[tool.setuptools.package-data]
+improver_example_data = ["**/*"]
